Add additional changes per review log

--- a/pmail/index.html
+++ b/pmail/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
 
-  <div class="banner">
+  <div class="navigation">
       <form>
       <input type="text" class="banner-textbox"/>
  
@@ -71,16 +71,20 @@
     </div>
     </div>
     <div class="address">smullins@enova.com</div>
-      <div class="app-image"><img src="img/apps.png"/>
-        <div class="app-wrapper">
-            <ul> <!-- TODO add href link -->
-            <li><div><img src="img/search.png" height="61" width="63"/></div></li>
-            <li><div><img src="img/mail.png" height="60" width="71"/></div></li>
-            <li><div><img src="img/drive.png" height="62" width="76"/></div></li>
-            <li><div><img src="img/calendar.png" height="70" width="83"/></div></li>
-            <li><div><img src="img/groups.png" height="74" width="85" /></div></li>
-            <li><div><img src="img/contacts.png" height="70" width="91"/></div></li>
-            </ul>
+      <div class="app-image dropdown-button"><img src="img/apps.png"/>
+        <div class="app-wrapper dropdown">
+            <div class="search">
+            </div>
+            <div class="mail">
+            </div>
+            <div class="drive">
+            </div>
+            <div class="calendar">
+            </div>
+            <div class="groups">
+            </div>
+            <div class="contacts">
+            </div>
         </div>
       </div>
    </div>
@@ -124,9 +128,9 @@
         </div>
       </div>
 
-      <div class="settings-button">
+      <div class="settings-button dropdown-button">
        <img src="img/glyphicons_136_cogwheel.png"/>
-      <div class ="box">
+      <div class ="box dropdown">
       <ul>
 
       <li>Display density:</li>
